--- a/message.html
+++ b/message.html
@@ -11,7 +11,7 @@
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/assets/css/app.css" />
   </head>
   <body>
     <header>
@@ -32,7 +32,7 @@
                 <a class="nav-link" href="#">Send message</a>
               </li>
               <li class="nav-item active d-flex align-items-center">
-                <<a class="nav-link" href="templates/blog1.html">Blog</a>
+                <<a class="nav-link" href="/blog">Blog</a>
               </li>
             </ul>
           </div>
